# ds_hw2

./: CMakeLists.txt  Company.cpp  Company.h  Data.cpp  Data.h  Dry.docx  Employee.cpp  Employee.h  Ex2Exception.h  List.h  Node.h  Rank.h  RankTreeExceptions.h  UnionFind.cpp  UnionFind.h  employeeTree.cpp  employeeTree.h  hash.h  library2.cpp  main2.cpp  main2_without_bonus.cpp  my_executable  test2.in.txt  test2.out.txt
build copy/: CMakeCache.txt  Makefile  compile_commands.json  my_executable
tests/: fbDiff.txt
tests/debug/: deb0.txt  deb1.txt  deb10.txt  deb11.txt  deb12.txt  deb13.txt  deb14.txt  deb15.txt  deb16.txt  deb17.txt  deb18.txt  deb19.txt  deb2.txt  deb20.txt  deb21.txt  deb22.txt  deb23.txt  deb24.txt  deb25.txt  deb26.txt  deb27.txt  deb28.txt  deb29.txt  deb3.txt  deb30.txt  deb31.txt  deb32.txt  deb33.txt  deb34.txt  deb35.txt  deb36.txt  deb37.txt  deb38.txt  deb39.txt  deb4.txt  deb40.txt  deb41.txt  deb42.txt  deb43.txt  deb44.txt  (+60 more)
tests/input/: in0.txt  in1.txt  in10.txt  in11.txt  in12.txt  in13.txt  in14.txt  in15.txt  in16.txt  in17.txt  in18.txt  in19.txt  in2.txt  in20.txt  in21.txt  in22.txt  in23.txt  in24.txt  in25.txt  in26.txt  in27.txt  in28.txt  in29.txt  in3.txt  in30.txt  in31.txt  in32.txt  in33.txt  in34.txt  in35.txt  in36.txt  in37.txt  in38.txt  in39.txt  in4.txt  in40.txt  in41.txt  in42.txt  in43.txt  in44.txt  (+60 more)
tests/my_output/: my_output_0.txt  my_output_1.txt  my_output_10.txt  my_output_11.txt  my_output_12.txt  my_output_13.txt  my_output_14.txt  my_output_15.txt  my_output_16.txt  (+91 more)
tests2/: README.txt
(+402 files in other folders)
